--- a/HTML/create.html
+++ b/HTML/create.html
@@ -1,11 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <title>Create New Ticket</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+ 
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+ 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+ 
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="../CSS/create.css">
 </head>
+ 
 <body>
-    
+ 
+<!-- NAVBAR -->
+<nav class="navbar bg-white border-bottom px-4 fixed-top">
+  <div class="d-flex align-items-center gap-2">
+    <h2 style="color: #2563eb;">
+      <i class="fa-solid fa-ticket pt-3" style="color: #2563eb;"></i> TicketDesk
+    </h2>
+  </div>
+ 
+  <!-- Right side user info -->
+  <div class="d-flex align-items-center gap-3">
+    <div id="userLogo" class="user-logo"></div>
+    <span class="fw-bold" id="username"></span>
+  </div>
+</nav>
+ 
+ 
+<!-- PAGE -->
+<div class="page-wrapper">
+ 
+  <div class="container">
+ 
+    <!-- BREADCRUMB -->
+    <div class="breadcrumb small mb-3 pt-3">
+      <a href="./ticket-list.html" class="text-primary">Tickets</a>
+      <span class="mx-1">›</span>
+      <span>Create Ticket</span>
+    </div>
+ 
+    <!-- HEADER -->
+    <div class="d-flex justify-content-between align-items-center mb-4 header-bar">
+  <div>
+    <h3 class="mb-1">Create New Ticket</h3>
+    <p class="text-muted mb-0">
+      Fill out the form below to create a new support ticket
+    </p>
+  </div>
+ 
+  <div class="d-flex gap-2 action-buttons">
+    <button class="btn btn-outline-secondary">
+      <a href="./ticket-list.html">Cancel</a>
+    </button>
+    <button class="btn btn-primary" onclick="submitTicket(event)">
+      + Create Ticket
+    </button>
+  </div>
+</div>
+ 
+ 
+    <!-- CARD -->
+    <div class="card">
+      <div class="card-header bg-white">
+        <strong>Ticket Information</strong>
+        <div class="text-muted small">
+          Please provide detailed information about your request
+        </div>
+      </div>
+ 
+      <div class="card-body">
+        <form id="ticketForm">
+ 
+          <div class="ticket-grid">
+ 
+            <!-- LEFT COLUMN -->
+            <div>
+              <label class="form-label">Short Description <span class="text-danger">*</span></label>
+              <input id="shortDescription" class="form-control mb-3" placeholder="Brief summary of the issue" required>
+ 
+             
+ 
+              <label class="form-label">
+                      Priority <span class="text-danger">*</span>
+             </label>
+                     <select id="priority" class="form-select mb-3" required>
+                       <option value="" selected disabled>Select priority</option>
+                        <option>Low</option>
+                         <option>Medium</option>
+                         <option>High</option>
+                     </select>
+ 
+                     <label class="form-label"> Due Date <span class="text-danger">*</span></label>
+                    <input type="date" id="dueDate" class="form-control mb-3" required>
+ 
+                    <label class="form-label">Department <span class="text-danger">*</span></label>
+                      <select id="department" class="form-select mb-3" required>
+                       <option value="" selected disabled>Select department</option>
+                         <option>IT</option>
+                        <option>HR</option>
+                              </select>
+ 
+ 
+ 
+              <label class="form-label">Category</label>
+              <select id="category" class="form-select mb-3">
+                <option selected disabled>Select category</option>
+                <option>Email</option>
+                <option>Hardware</option>
+                <option>Software</option>
+                <option>Network</option>
+              </select>
+ 
+              <label class="form-label">Contact Type</label>
+              <select id="contactType" class="form-select">
+                <option>Portal</option>
+                <option>Email</option>
+                <option>Phone</option>
+              </select>
+            </div>
+ 
+            <!-- RIGHT COLUMN -->
+            <div>
+              <label class="form-label">Description</label>
+              <textarea id="description" class="form-control mb-3" rows="6"
+                placeholder="Provide detailed information about the issue, including steps to reproduce, error messages, and any relevant context"></textarea>
+ 
+                <label class="form-label">State <span class="text-danger">*</span></label>
+              <select id="state" class="form-select mb-3" required>
+                  <option value="" selected disabled>Select state</option>
+                   <option>Open</option>
+                    <option>In Progress</option>
+                    <option>Resolved</option>
+                     <option>Closed</option>
+                </select>
+ 
+ 
+              <label class="form-label">Assigned To</label>
+              <input id="assignedTo" class="form-control" placeholder="Enter assignee name or email">
+            </div>
+          </div>
+ 
+          <!-- ATTACHMENT -->
+          <input type="file" id="attachmentInput" hidden accept="image/*">
+          <p id="attachmentInfo" class="small text-success mt-2"></p>
+ 
+          <!-- ACTION BAR -->
+          <div class="action-bar mt-4 pt-3 border-top">
+            <div class="d-flex gap-3">
+              <a href="#" onclick="openAttachmentPicker()">📎 Add Attachment</a>
+              <a href="#" onclick="openPreview()">👁 Preview</a>
+            </div>
+ 
+            <div class="d-flex gap-3 align-items-center">
+              <a href="./ticket-list.html" class="text-muted" onclick="saveDraft(event)">Save as Draft</a>
+              <button class="btn btn-primary" type="submit">+ Create Ticket</button>
+            </div>
+          </div>
+ 
+        </form>
+      </div>
+    </div>
+ 
+    <!-- HELP BOX -->
+    <div class="help-box mt-4">
+      <strong>Need Help?</strong>
+      <p class="mb-2">
+        If you're unsure about any field or need assistance, our support team is here to help.
+      </p>
+      <a href="#">📘 View Documentation</a>
+      <a href="#" class="ms-3">📞 Contact Support</a>
+    </div>
+ 
+  </div>
+</div>
+ 
+<!-- MODALS -->
+<div class="modal fade" id="previewModal">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Ticket Preview</h5>
+        <button class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body" id="previewBody"></div>
+    </div>
+  </div>
+</div>
+ 
+<div class="modal fade" id="draftModal">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Draft Saved</h5>
+        <button class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">Ticket saved successfully.</div>
+    </div>
+  </div>
+</div>
+ 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../JS/create.js"></script>
 </body>
 </html>
+ 
