New Changes in HTML for File Updtion

--- a/HTML/create.html
+++ b/HTML/create.html
@@ -146,7 +146,7 @@
           </div>
  
           <!-- ATTACHMENT -->
-          <input type="file" id="attachmentInput" hidden accept="image/*">
+          <input type="file" id="attachmentInput" accept="image/*">
           <p id="attachmentInfo" class="small text-success mt-2"></p>
  
           <!-- ACTION BAR -->
