details.html updated

--- a/HTML/ticket-detail.html
+++ b/HTML/ticket-detail.html
@@ -178,7 +178,7 @@ User is unable to send or receive emails since yesterday morning. Error message 
  
     <div class="add-note">
       <p>Add Note</p>
-      <textarea placeholder="Add a note or update..."></textarea>
+      <textarea placeholder="Add  note or update..."></textarea>
       <button class="btn primary full">
         Add Note
       </button>
