--- a/HTML/reports.html
+++ b/HTML/reports.html
@@ -2,10 +2,127 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tickets Report</title>
+ 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+ 
+    <link rel="stylesheet" href="./reports.css">
+ 
+      <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+ 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.5.0/chart.umd.min.js"></script>
+ 
 </head>
 <body>
-    
+ 
+    <div class="breadcrumb small mb-3 pt-3">
+      <a href="./ticket-list.html" class="text-primary">Tickets</a>
+      <span class="mx-1">›</span>
+      <span>Report</span>
+    </div>
+ 
+    <h1 class="title">Incident Reports Dashboard</h1>
+    <p class="subtitle">Overview of ticket health</p>
+ 
+    <!-- MAIN CONTAINER -->
+    <div id="main-container">
+ 
+        <!-- LEFT CONTAINER -->
+        <div id="left-container">
+ 
+            <!-- TOTAL TICKETS -->
+            <div class="card total_count_card">
+                <h3>
+                    <i class="fa-solid fa-ticket icon heading purple"></i>
+                    Total Tickets
+                </h3>
+                <h1 id="total-tickets-count"></h1>
+                <p><i class="fa-solid fa-circle-info icon gray"></i> All incidents created</p>
+            </div>
+           
+            <div id="Tickets_By_Category">
+            <!-- STATUS -->
+            <div class="card StatesCard">
+                <h3>
+                    <i class="fa-solid fa-list-check icon blue"></i>
+                    Tickets by Status
+                </h3>
+                <ul>
+                    <li>
+                        <span><i class="fa-solid fa-circle-exclamation icon red"></i> Open</span>
+                        <span class="open" id="status-open-count">12</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-spinner icon blue"></i> In Progress</span>
+                        <span class="progress" id="status-inprogress-count">8</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-circle-check icon green"></i> Resolved</span>
+                        <span class="resolved" id="status-resolved-count">22</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-lock icon gray"></i> Closed</span>
+                        <span class="closed" id="status-closed-count">5</span>
+                    </li>
+                </ul>
+            </div>
+ 
+            <!-- PRIORITY -->
+            <div class="card PriorityCard">
+                <h3>
+                    <i class="fa-solid fa-fire icon orange"></i>
+                    Tickets by Priority
+                </h3>
+                <ul>
+                    <li>
+                        <span><i class="fa-solid fa-arrow-up icon red"></i> High</span>
+                        <span class="open" id="priority-high-count">10</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-arrows-left-right icon orange"></i> Medium</span>
+                        <span class="medium" id="priority-medium-count">18</span>
+                    </li>
+                    <li>
+                        <span><i class="fa-solid fa-arrow-down icon green"></i> Low</span>
+                        <span class="resolved" id="priority-low-count">14</span>
+                    </li>
+                </ul>
+            </div>
+            </div>
+ 
+        </div>
+ 
+        <!-- RIGHT CONTAINER -->
+        <div id="right-container">
+ 
+            <!-- STATUS CARD (NO BAR GRAPH) -->
+            <div class="chart-card">
+                <h3>
+                    <i class="fa-solid fa-chart-column icon blue"></i>
+                    Tickets by Status
+                </h3>
+                 <canvas id="ChartBar"></canvas>
+            </div>
+ 
+            <!-- PIE REFERENCE -->
+            <div class="chart-card">
+                <h3>
+                    <i class="fa-solid fa-chart-pie icon purple"></i>
+                    Tickets by Priority
+                </h3>
+ 
+                <div class="pie-wrapper">
+                    <div class="pie-border">
+                         <canvas id="PieChart"></canvas>
+                    </div>
+                </div>
+ 
+            </div>
+ 
+        </div>
+ 
+    </div>
+ <script src="./reports.js"></script>
 </body>
 </html>
