--- a/HTML/reports.html
+++ b/HTML/reports.html
@@ -7,7 +7,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
  
-    <link rel="stylesheet" href="./reports.css">
+    <link rel="stylesheet" href="../CSS/reports.css">
  
       <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
  
@@ -125,4 +125,5 @@
     </div>
  <script src="./reports.js"></script>
 </body>
+
 </html>
