--- a/HTML/reports.html
+++ b/HTML/reports.html
@@ -123,7 +123,8 @@
         </div>
  
     </div>
- <script src="./reports.js"></script>
+ <script src="../JS/reports.js"></script>
 </body>
 
 </html>
+
