login page paths corrected

--- a/HTML/register.html
+++ b/HTML/register.html
@@ -59,7 +59,7 @@
       <button type="submit">Register</button>
 
       <p class="auth-link">
-        Already registered? <a href="login.html">Login</a>
+        Already registered? <a href="../HTML/login.html">Login</a>
       </p>
     </form>
   </div>
