--- a/HTML/login.html
+++ b/HTML/login.html
@@ -38,7 +38,7 @@
 
                   <p class="auth-link">
 
-                        New user? <a href="register.html">Register here</a>
+                        New user? <a href="../HTML/register.html">Register here</a>
                   </p>
             </form>
       </div>
