--- a/HTML/login.html
+++ b/HTML/login.html
@@ -29,8 +29,8 @@
                   <select id="loginRole">
                         <option value="">Select role</option>
                         <option value="System Administrator">System Administrator</option>
-                        <option value="Support Agent">Admin</option>
-                        <option value="Admin">ITIL</option>
+                        <option value="Admin">Admin</option>
+                        <option value="ITIL">ITIL</option>
                   </select>
                   <div class="error" id="loginRoleError"></div>
 
@@ -45,5 +45,6 @@
 
       <script src="../JS/login.js"></script>
 </body>
+
 
 </html>
