Fix formatting issues in register.html

--- a/HTML/register.html
+++ b/HTML/register.html
@@ -51,8 +51,8 @@
       <select id="regRole">
         <option value="">Select role</option>
         <option value="System Administrator">System Administrator</option>
-        <option value="Support Agent">Admin</option>
-        <option value="Admin">ITIL</option>
+        <option value="Admin">Admin</option>
+        <option value="ITIL">ITIL</option>
       </select>
       <div class="error" id="roleError"></div>
 
@@ -66,5 +66,6 @@
 
   <script src="../JS/login.js"></script>
 </body>
+
 
 </html>
